vs2003_cd01/Program Files/Microsoft Visual Studio .NET 2003/SDK/v1.1/QuickStart/aspplus/samples/apps/errors/handlerr/error2.src
C# Source:CS/error2.aspx
VB Source:VB/error2.aspx
JScript Source:JS/error2.aspx
